Selection Z-index Hot Fix

--- a/main.css
+++ b/main.css
@@ -387,17 +387,34 @@ margin-top: -24px;
   height: 246px;background-color: transparent;}
 
   .selection-shield-wrapper {    position: fixed;
-    bottom: 171px;
+    bottom: 180px;
     left: 0px;
-    width: 100%;display: none;}
+    width: 100%;display: none;z-index: 15;}
 
     .selection-support-wrapper {
       position: fixed;
-      bottom: 171px;
+      bottom: 180px;
       left: 0px;
       width: 100%;
       display: none;
+      z-index: 15;
     }
+
+    .healing-overlay { 
+      height: 99px;
+      width: 99px;
+      border-radius: 7px;position: absolute;margin-top: -100px}
+
+      .healing-box {    position: absolute;
+        width: 100%;
+        height: 99px;
+        background-color: #0080005e;
+        top: 0px;border-radius: 7px;}
+
+    .healingBadge {padding-left: 33px;
+      margin-top: 35px;position: relative; z-index: 5;;}
+
+    .healingBadge > img {width: 30px;}
 
 .grid-button:first-of-type {margin-left: 0px;}
 
